ejercicio struts factura

--- a/src/main/resources/org/demo/package.properties
+++ b/src/main/resources/org/demo/package.properties
@@ -1,3 +1,4 @@
 hello.message = Struts is up and running...
+invalid.fieldvalue.invoiceBean.importeBruto = El valor del campo Importe Bruto no es válido.
 requiredstring=  ${getText(fieldName)} is required.
 form.tittle.message = Registry form
